# burn-model-linear

./: Cargo.toml  README.md  allow.plist  allow.sh
src/: main.rs  ndarray_ad_false.rs  ndarray_ad_true.rs  wgpu_ad_false.rs  wgpu_ad_true.rs
