[package]
edition = "2021"
name = "burn-model-linear"
version = "0.0.0"

[dependencies.burn]
default-features = false
features = ["autodiff", "default", "wgpu", "ndarray"]
git = "https://github.com/tracel-ai/burn"
rev = "dce55657bed85fa4f73fd1a547f8172a119e73dc" # The parent of PR 2347
# rev = "584dbdbd5d000fa18bab5e1af05ce060a0bb8c41" # PR 2347

[dependencies]
anyhow = {version = "1.0.89", default-features = false, features = ["std"]}
kdam = {version = "0.5.2", default-features = false}
log = {version = "0.4.22", default-features = false}
pretty_env_logger = {version = "0.5.0", default-features = false}

[[bin]]
name = "ndarray-ad-false"
path = "src/ndarray_ad_false.rs"

[[bin]]
name = "ndarray-ad-true"
path = "src/ndarray_ad_true.rs"

[[bin]]
name = "wgpu-ad-false"
path = "src/wgpu_ad_false.rs"

[[bin]]
name = "wgpu-ad-true"
path = "src/wgpu_ad_true.rs"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
debug = true
